Fixed about me overlap

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -349,6 +349,6 @@
   }
 
   #about {
-    margin-top: -7.5rem;
+    margin-top: 3rem;
   }
 }
